nota controller list

--- a/SistemaEscola/src/br/sistemaescola/views/NotaJInternalFrame.form
+++ b/SistemaEscola/src/br/sistemaescola/views/NotaJInternalFrame.form
@@ -285,6 +285,9 @@
                       <StringArray count="0"/>
                     </Property>
                   </Properties>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="ResultJList.addListSelectionListener(actionList);"/>
+                  </AuxValues>
                 </Component>
               </SubComponents>
             </Container>
