--- a/SistemaEscola/src/br/sistemaescola/views/ProfessorJInternalFrame.form
+++ b/SistemaEscola/src/br/sistemaescola/views/ProfessorJInternalFrame.form
@@ -391,34 +391,35 @@
         <Component class="javax.swing.JComboBox" name="estadoJComboBox">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="27">
-                <StringItem index="0" value="Acre (AC)"/>
-                <StringItem index="1" value="Alagoas (AL)"/>
-                <StringItem index="2" value="Amap&#xe1; (AP)"/>
-                <StringItem index="3" value="Amazonas (AM)"/>
-                <StringItem index="4" value="Bahia (BA)"/>
-                <StringItem index="5" value="Cear&#xe1; (CE)"/>
-                <StringItem index="6" value="Distrito Federal (DF)"/>
-                <StringItem index="7" value="Esp&#xed;rito Santo (ES)"/>
-                <StringItem index="8" value="Goi&#xe1;s (GO)"/>
-                <StringItem index="9" value="Maranh&#xe3;o (MA)"/>
-                <StringItem index="10" value="Mato Grosso (MT)"/>
-                <StringItem index="11" value="Mato Grosso do Sul (MS)"/>
-                <StringItem index="12" value="Minas Gerais (MG)"/>
-                <StringItem index="13" value="Par&#xe1; (PA)"/>
-                <StringItem index="14" value="Para&#xed;ba (PB)"/>
-                <StringItem index="15" value="Paran&#xe1; (PR)"/>
-                <StringItem index="16" value="Pernambuco (PE)"/>
-                <StringItem index="17" value="Piau&#xed; (PI)"/>
-                <StringItem index="18" value="Rio de Janeiro (RJ)"/>
-                <StringItem index="19" value="Rio Grande do Norte (RN)"/>
-                <StringItem index="20" value="Rio Grande do Sul (RS)"/>
-                <StringItem index="21" value="Rond&#xf4;nia (RO)"/>
-                <StringItem index="22" value="Roraima (RR)"/>
-                <StringItem index="23" value="Santa Catarina (SC)"/>
-                <StringItem index="24" value="S&#xe3;o Paulo (SP)"/>
-                <StringItem index="25" value="Sergipe (SE)"/>
-                <StringItem index="26" value="Tocantins (TO)"/>
+              <StringArray count="28">
+                <StringItem index="0" value="Selecionar"/>
+                <StringItem index="1" value="Acre (AC)"/>
+                <StringItem index="2" value="Alagoas (AL)"/>
+                <StringItem index="3" value="Amap&#xe1; (AP)"/>
+                <StringItem index="4" value="Amazonas (AM)"/>
+                <StringItem index="5" value="Bahia (BA)"/>
+                <StringItem index="6" value="Cear&#xe1; (CE)"/>
+                <StringItem index="7" value="Distrito Federal (DF)"/>
+                <StringItem index="8" value="Esp&#xed;rito Santo (ES)"/>
+                <StringItem index="9" value="Goi&#xe1;s (GO)"/>
+                <StringItem index="10" value="Maranh&#xe3;o (MA)"/>
+                <StringItem index="11" value="Mato Grosso (MT)"/>
+                <StringItem index="12" value="Mato Grosso do Sul (MS)"/>
+                <StringItem index="13" value="Minas Gerais (MG)"/>
+                <StringItem index="14" value="Par&#xe1; (PA)"/>
+                <StringItem index="15" value="Para&#xed;ba (PB)"/>
+                <StringItem index="16" value="Paran&#xe1; (PR)"/>
+                <StringItem index="17" value="Pernambuco (PE)"/>
+                <StringItem index="18" value="Piau&#xed; (PI)"/>
+                <StringItem index="19" value="Rio de Janeiro (RJ)"/>
+                <StringItem index="20" value="Rio Grande do Norte (RN)"/>
+                <StringItem index="21" value="Rio Grande do Sul (RS)"/>
+                <StringItem index="22" value="Rond&#xf4;nia (RO)"/>
+                <StringItem index="23" value="Roraima (RR)"/>
+                <StringItem index="24" value="Santa Catarina (SC)"/>
+                <StringItem index="25" value="S&#xe3;o Paulo (SP)"/>
+                <StringItem index="26" value="Sergipe (SE)"/>
+                <StringItem index="27" value="Tocantins (TO)"/>
               </StringArray>
             </Property>
           </Properties>
